<resources>
    <string name="app_name">EventeFy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="one">ONE</string>
    <string name="four">FOUR</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_custom_view_icon_text_tabs">Home</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="ip_local">https://eventefy.herokuapp.com</string>
    <string name="ip_localhost">https://eventefy.herokuapp.com</string>
    <string name="login">/webapi/login/checkuser</string>
    <string name="signup_checkuseridvalid">/webapi/signup/checkuseridvalid</string>
    <string name="signup_location_update">/webapi/signup/updateuserlocation</string>
    <string name="signup_adduser">/webapi/signup/adduser</string>
    <string name="verification_code_get">/webapi/signup/getverificationcode</string>
    <string name="verification_check">/webapi/signup/checkverificationcode</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_event">/webapi/events/add</string>
    <string name="add_event_to_wishlist">/webapi/events/addeventtomywishlist</string>
    <string name="remove_event_from_wishlist">/webapi/events/removeeventfromwishlist</string>
    <string name="edit_event">/webapi/events/editevent</string>
    <string name="get_nearby_event">/webapi/events/getnearbyevents</string>
    <string name="get_nearby_facebook_event">/webapi/events/getfacebooknearbyevents</string>
    <string name="reg_gcm_userid">/webapi/notifications/registeruser</string>
    <string name="get_user_for_event">/webapi/comments/getuserforevent</string>
    <string name="get_comment_for_event">/webapi/comments/geteventcomment</string>
    <string name="add_comment_in_event">/webapi/comments/addcomment</string>
    <string name="delete_comment_from_event">/webapi/comments/deletecomment</string>
    <string name="login_action">/webapi/login/checkuser</string>
    <string name="login_action_facebook">/webapi/login/checkuserfacebookuser</string>
    <string name="verify_vcode">/webapi/signup/checkverificationcode</string>
    <string name="register_notification_detail">/webapi/notifications/registeruser</string>
    <string name="GCM_sender_id">1070420205452</string>
    <string name="get_nearby_users">/webapi/events/getnearbyusers</string>
    <string name="rspv_user_to_event">/webapi/events/addusertoevent</string>
    <string name="remove_user_from_event">/webapi/events/deleteuserfromevent</string>
    <string name="delete_event">/webapi/events/deleteevent</string>
    <string name="remote_events">/webapi/events/getremoteevents</string>
    <string name="update_user_password">/webapi/signup/updatepassword</string>
    <string name="user_event">/webapi/events/getuserevent</string>
    <string name="upda_user">/webapi/signup/updateuser</string>
    <string name="get_user_notifications">/webapi/notifications/getusernotification</string>
    <string name="signup_object_viewe_profile">signup_object_viewe_profile</string>
    <string name="user_get_access_code">/webapi/signup/getaccesscodetoresetpassword</string>
    <string name="user_reset_password">/webapi/signup/resetuserpassword</string>
    <string name="home_no_location">noLocation</string>
    <string name="home_no_data">noData</string>
    <string name="home_loading">Loading</string>
    <string name="home_data">data</string>
    <string name="home_connection_error">home_connection_error</string>
    <string name="invite_add_user">inviteAddUser</string>
    <string name="invite_remove_user">inviteRemoveUser</string>
    <string name="update_event_success">update_success</string>
    <string name="update_event_fail">update_fail</string>
    <string name="undo">undo</string>
    <string name="edited">Edited</string>
    <string name="Undefined">Undefined</string>
    <string name="invisible_event">Event will no longer visible to new or unregister users</string>
    <string name="visible_event">Event will be visible to all users around</string>
    <string name="invisible_event_btn">INVISIBLE</string>
    <string name="check_in_button">Check In</string>
    <string name="read_more">Read More</string>
    <string name="visible_event_btn">VISIBLE</string>
    <string name="event_attending">event_attending</string>
    <string name="event_not_attending">event_not_attending</string>
    <string name="event_admin">event_admin</string>
    <string name="event_register_server_error">event_register_server_error</string>
    <string name="MY_LOCATION_LATITUDE">LATITUDE</string>
    <string name="MY_LOCATION_LONGITUDE">LONGITUDE</string>
    <string name="USER_CURRENT_LOCATION_SERVICE">USER_CURRENT_LOCATION_SERVICE</string>
    <string name="USER_ID">USER_ID</string>
    <string name="nearby_flag">nearby_flag</string>
    <string name="remot_flag">remot_flag</string>
    <string name="create_event_flag">nearby_flag</string>
    <string name="userObject">userObject</string>
    <string name="userObjectRemote">userObjectRemote</string>
    <string name="notofocationId">notofocationId</string>
    <string name="userName">userName</string>
    <string name="token">token</string>
    <string name="profilePicUrl">profilePicUrl</string>
    <string name="dob">dob</string>
    <string name="userId">userId</string>
    <string name="isFacebook">isFacebook</string>
    <string name="isVerified">isVerified</string>
    <string name="resend_vcode">Did not received code? Click to resend"</string>
    <string-array name="visiblity_miles_arrays">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <string-array name="category_arrays">
        <item>Birthday</item>
        <item>Team Building Events</item>
        <item>Trade Shows</item>
        <item>Golf Events</item>
        <item>Networking Events</item>
        <item>Incentive Travel</item>
        <item>Theme Parties</item>
        <item>Family Events</item>
        <item>Conference</item>
        <item>Exhibition</item>
        <item>Airshow</item>
        <item>Amphitheater</item>
        <item>Anniversary</item>
        <item>Archery</item>
        <item>Army</item>
        <item>Art-museum</item>
        <item>Audio</item>
        <item>Bar</item>
        <item>Family</item>
        <item>Sport-Other</item>
        <item>Squash</item>
        <item>Childern Sports</item>
        <item>Other</item>
    </string-array>
    <string name="selected_place">Last Selected Place:</string>
    <string name="pick_image_intent_text">Please pick image</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="volatile_event">Volatile</string>
    <string name="event_for_eventinfo">event_for_eventinfo</string>
    <string name="create_event_category">Event_Category</string>
    <string name="create_event_category_public">Event_Category_Public</string>
    <string name="create_event_category_private">Event_Category_Private</string>
    <string name="image_view_for_fullscreen_mode">Image View For Fullscreen Mode</string>
    <string name="event_object_for_image_comment_activity">event_object_for_image_comment_activity</string>
    <string name="event_object_for_street_view">event_object_for_street_view</string>
    <string name="notification_object_for_eventinfo">Notification_Object</string>
    <string name="facebook_app_id">250414581969875</string>
    <string name="facebook_profile_start_url">https://graph.facebook.com/</string>
    <string name="facebook_profile_end_url">/picture?type=large</string>
    <string name="event_type_value">Event Type Value</string>
    <string name="event_private">Event Private</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="event_to_edit_eventinfo">Event To Edit EditInfo</string>
    <string name="create_event_event_view_pager">Event View Pager</string>
    <string name="event_object_pass_to_createeventfragment2">event object pass to createeventfragment2</string>
    <string name="visibility_mode_visible">Visible</string>
    <string name="visibility_mode_invisible">Invisible</string>
    <string name="visibility_mode_donotdisturb">DoNotDisturb</string>
    <string name="status_button">status_button</string>
    <string name="personal_info_button">personal_info_button</string>
    <string name="password_button">password_button</string>
    <string name="comment_add_success">comment_add_success</string>
    <string name="comment_add_posting">comment_add_posting</string>
    <string name="comment_add_fail">comment_add_fail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="invalid_username_password">Username/Password do not match</string>
    <string name="login_text">LOGIN</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="forgot_password">Forget password?</string>
    <string name="name_label">Name</string>
    <string name="email_phone_number">Email</string>
    <string name="password_label">Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="minimum_age">Minimum age to create account is 13</string>
    <string name="verify_account">verify_account</string>
    <string name="verify_account_success">verify_account_success</string>
    <string name="verify_account_fail">verify_account_fail</string>
    <string name="verify_account_server_error">verify_account_server_error</string>
    <string name="signup_success">signup_success</string>
    <string name="signup_account_already_present">signup_account_already_present</string>
    <string name="signup_server_error">signup_server_error</string>
    <string name="create_event_success">create_event_success</string>
    <string name="create_event_fail">create_event_fail</string>
    <string name="create_event_server_error">create_event_server_error</string>
    <string name="verification_code_generate_success">verification_code_generate_success</string>
    <string name="verification_code_generate_fail">verification_code_generate_fail</string>
    <string name="verification_code_generate_server_error">verification_code_generate_server_error</string>
    <string name="user_account_update_success">user_account_update_success</string>
    <string name="user_account_update_fail">user_account_update_fail</string>
    <string name="user_account_update_server_error">user_account_update_server_error</string>
    <string name="reset_password_success">reset_password_success</string>
    <string name="reset_password_fail">reset_password_fail</string>
    <string name="reset_password_server_error">reset_password_server_error</string>
    <string name="access_code_generation_success">access_code_generation_success</string>
    <string name="access_code_generation_fail">access_code_generation_fail</string>
    <string name="access_code_generation_error">access_code_generation_error</string>
    <string name="login_success">login_success</string>
    <string name="login_fail">login_fail</string>
    <string name="login_server_error">login_server_error</string>
    <string name="wish_list_update_success">wish_list_update_success</string>
    <string name="wish_list_update_fail">wish_list_update_fail</string>
    <string name="wish_list_update_server_error">wish_list_update_server_error</string>
    <string name="notification_id_gcm_register_success">notification_id_gcm_register_success</string>
</resources>