<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="20dp">

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="160dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:src="@drawable/logo" />-->

        <!--  Email Label -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextLabel1"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingLeft="8dp"
                android:textCursorDrawable="@color/com_facebook_button_background_color_disabled"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                android:textColor="@color/com_facebook_button_background_color_disabled"
                app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:hintTextAppearance="@style/TextLabel1"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                android:paddingLeft="8dp"
                android:textCursorDrawable="@color/com_facebook_button_background_color_disabled"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                android:textColor="@color/com_facebook_button_background_color_disabled"
                app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/invalid_username_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/invalid_username_password"
            android:visibility="gone"
            android:textColor="@color/colorErrorRed"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/link_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:text="@string/forgot_password"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login_text"
            android:textColor="@color/white" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:paddingLeft="24dp"
            />

        <TextView
            android:id="@+id/link_signup"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_gravity="center"
            android:text="@string/no_account"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:textSize="16sp" />


    </LinearLayout>

</ScrollView>