<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/colorPrimary"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="20dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="Create Account"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:textSize="24sp" />

        <!-- Name Label -->
        <!--<ImageView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="160dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:src="@drawable/logo" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"

            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
            >

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_label"
                android:textCursorDrawable="@color/com_facebook_button_background_color_disabled"
                android:paddingLeft="8dp"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                android:textColor="@color/com_facebook_button_background_color_disabled"
                app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
            android:layout_marginBottom="8dp"
            android:textSize="20sp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_phone_number"
                android:paddingLeft="8dp"
                android:textCursorDrawable="@color/com_facebook_button_background_color_disabled"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                android:textColor="@color/com_facebook_button_background_color_disabled"
                app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
            android:layout_marginBottom="8dp"
            android:textSize="20sp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:paddingLeft="8dp"
                android:textCursorDrawable="@color/com_facebook_button_background_color_disabled"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                android:textColor="@color/com_facebook_button_background_color_disabled"
                app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
            android:focusable="false"
            android:textSize="20sp">

            <EditText
                android:id="@+id/input_DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:textCursorDrawable="@color/com_facebook_button_background_color_disabled"
                android:hint="@string/date_of_birth"
                android:paddingLeft="8dp"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                android:textColor="@color/com_facebook_button_background_color_disabled"
                app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
                android:inputType="textCapWords|date" />
        </android.support.design.widget.TextInputLayout>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/link_dob_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
               android:visibility="gone"
            android:text="@string/already_a_member"
            android:textColor="@color/colorErrorRed"
            android:textSize="16sp" />
        <!-- Signup Button -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="20dp"
            android:text="@string/already_a_member"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            app:hintTextAppearance="@color/com_facebook_button_background_color_disabled"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>